fix: NullPointException 에러 수정
- String이 null인 경우, isBlank 메서드 자체를 호출할 수 없다.
- StringUtils를 사용함으로써 문제를 해결